--- a/assets/css/grid-system.scss
+++ b/assets/css/grid-system.scss
@@ -1,55 +1,73 @@
 /* GRID distribution for Home page */
 
 .grid-container {
-    display: grid;
-    grid-template-columns: minmax(10px, 100px) minmax(400px, auto) minmax(10px, 100px);
-    grid-auto-rows: minmax(100px, auto);
+  display: grid;
+  grid-template-columns: repeat(12, [col-start] 1fr);
+  column-gap: 16px;
+  row-gap: 16px;
+}
+
+.grid-container > * {
+  grid-column: col-start / span 12;
+}
+
+.header {
+  grid-column: col-start / span 12;
+  grid-row: 1 / 2;
+  position: sticky;
+  top: 0;
+  height: 90px;
+  z-index: 9999;
+}
+
+.content {
+  grid-column: col-start 1 / span 12;
+  grid-row: 3 / 4;
+}
+
+.content > * {
+  grid-column: col-start 1 / span 12;
+}
+
+.content-sections{
+  grid-column: col-start 3 / span 8;
+  margin-top: 80px;
+  row-gap: 80px;
+}
+
+.main-footer {
+  grid-column: col-start / span 12;
+  grid-row: 4 / 5;
+}
+
+
   
-    width: 100%;
-    height: 100%;
   
-    column-gap: 10px;
-    row-gap: 7rem;
-    background-color: white;
+@media screen and (max-width: 655px) {
+  .grid-container {
+    grid-template-columns: repeat(4, [col-start] 1fr);
+    column-gap: 8px;
+  }
+
+  .grid-container > * {
+    grid-column: col-start / span 4;
   }
   
-  .grid-row-1 {
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
+  .header{
+    grid-column: col-start / span 4;
+    height: 70px;
+  }
+
+  .landing-content {
+    grid-column: col-start / span 4;
+  }
+
+  .content {
+    grid-column: col-start 1 / span 4;
   }
   
-  .grid-row-2 {
-    grid-column: 2 / 3;
-    grid-row: 2 / 2;
+  .main-footer {
+    grid-column: col-start / span 4;
   }
-  
-  .grid-row-3 {
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-  }
-  
-  .grid-row-4 {
-    grid-column: 2 / 3;
-    grid-row: 4 / 5;
-  }
-  
-  .grid-row-5 {
-    grid-column: 2 / 3;
-    grid-row: 5 / 6;
-  }
-  
-  .grid-row-6 {
-    grid-column: 2 / 3;
-    grid-row: 6 / 7;
-  }
-  
-  
-  @media screen and (max-width: 850px) {
-    .grid-container {
-      display: grid;
-      grid-template-columns: 1vw 1fr 1vw;
-      grid-auto-rows: minmax(100px, auto);
-    }
-  
-  
-  }
+
+}
