--- a/assets/css/font-system.scss
+++ b/assets/css/font-system.scss
@@ -8,46 +8,32 @@
   src: url('../fonts/gobCL_Regular.otf');
 }
 
-body {
-  font-family: gobCL;
-  font-size: calc(12px + 0.35vw); /* Responsive base font size */
-  line-height: calc(12px + 1.05vw); /* Responsive Vertical Rhythm */
-}
-
-.main-ctnr {
-  width: 100%; /* For small screens */
-  max-width: 1140px; /* For large screens */
-  margin: auto; /* Center the container in the viewport */
+html{
+  font-size: calc(15px + 0.390625vw);
 }
 
 h1 {
-  font-size: 1.912em;
-  line-height: calc(18px + 1.8vw); /* Responsive Vertical Rhythm */
+  font-size: 1.8rem;
 }
 
 h2 {
-  font-size: 1.616em;
-  line-height: calc(18px + 1vw); /* Responsive Vertical Rhythm */
+  font-size: 1.5rem;
 }
 
 h3 {
-  font-size: 1.471em;
-  line-height: calc(18px + 0.7vw); /* Responsive Vertical Rhythm */
+  font-size: 1.3rem;
 }
 
-h4 { font-size: 1.3em; }
-h5 { font-size: 1.243em; }
-h6 { font-size: 1.132em; }
-
-h4, h5, h6 { 
-  line-height: calc(18px + .2vw); /* Responsive Vertical Rhythm */
+h4 {
+  font-size: 1.1rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: calc(12px + 1.05vw) 0; /* Responsive margins */
+p {
+  font-size: 1rem;
 }
 
 .text-contrast{
   color: #f3b757;
   font-weight: 550;    
 }
+
